--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=DFRobot_TCS34725
+name=DFRobot_TCS
 version=1.0.0
 author=DFRobot
-maintainer=PengKaixing <kaixing.peng@dfrobot.com>
+maintainer=TangJie <jie.tang@dfrobot.com>
 sentence=A color sensor library
 paragraph=  Gets the ambient light color
 category=Sensors
-url=https://github.com/DFRobot/DFRobot_TCS34725
+url=https://github.com/DFRobot/DFRobot_TCS34
 architectures=*
